zml/tools/suspensiontuner/style.css
html {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: white;
}

body {
    background-color: #222;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
}

main {
    background-color: #333;
    box-shadow: 10px 10px 5px black;
    width: 35rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
    margin-bottom: 2rem;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-bottom: 1.5rem;
}

.title {
    margin: 20px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

h3 {
    font-weight: 100;
    margin: 0;
}

p {
    font-weight: 200;
    margin: 0;
    padding: 0;
}

ul {
    list-style-type: none;
    padding-left: 1rem;
    margin-top: 0.75rem;
    margin-bottom: 0.75rem;
}

li {
    font-weight: 200;
    margin-bottom: 0.5rem;
}

hr {
    border-color: gray;
    width: 100%;
}

a {
    color: white;
    text-decoration: none;
    margin: 0;
    padding: 20px;
    text-align: center;
    display: block;
    background-color: #444;
    box-shadow: 2px 2px 4px black;
    margin-top: 20px;
}
a > h3 {
    padding: 20px;
    background-color: #444;
    box-shadow: 4px 4px 4px #0006;
    transition: background-color .2s, box-shadow .2s;
}
a > h3:hover {
    background-color: #555;
    box-shadow: 8px 8px 10px #0006;
}

a:hover {
    color: white;
    text-decoration: none;
}

.prefix-emoji {
    display: inline-block;
    width: 1.5rem;
    margin: 0;
    padding: 0;
    line-height: 0;
}

.centertext {
    text-align: center;
}

.discord {
    margin-top: 20px;
    margin-bottom: 20px;
    display: flex;
    justify-content: space-around;
}

.graytext {
    color: gray;
}

.bolder {
    font-weight: 400;
}

.inputbox {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.inputbox > p:nth-child(1) {
    margin-left: auto;
}
.inputbox > p:nth-child(2) {
    width: 60px;
}

.mainapp {
    margin: 1rem;
    background-color: #333;
    box-shadow: 2px 2px 4px black;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 2rem;
}

